# gistools

./: .gitattributes  LICENSE  README.md  pyproject.toml
docs/: README.md  gistools.html  index.html  search.js  utils_docs.txt
docs/gistools/: geometry.html  gmaps.html  gmapsro.html  place.html  plotting.html  plus_code.html  strings.html  utils.html
gistools/: __init__.py  geometry.py  gmaps.py  gmapsro.py  place.py  plotting.py  plus_code.py  strings.py  utils.py
tests/notebooks/: _sandbox.ipynb
tests/notebooks/gmapsro/fm/: scenario.json  test_gmpro.ipynb
tests/notebooks/gmapsro/fm/_dataset/: depots.csv  shipments.csv  vehicles.csv  visits.csv
tests/notebooks/gmapsro/ldk/: scenario.json  test_gmapsro.ipynb  test_gmapsro_dataprep.ipynb
tests/notebooks/gmapsro/ldk/_dataset/: dataset_PF_ANNECY.pickle  depots.csv  stores.csv
tests/notebooks/misc/: address_verification_B2B_or_B2C.ipynb
