[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "gistools"
version = "0.0.1"
authors = [
  { name="Jérôme VIGNERON", email="jerome.vigneron@gmail.com" },
]
description = "A package for working with geospatial data."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Apache License, Version 2.0",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jvigneron-hub/gistools"
Issues = "https://github.com/jvigneron-hub/gistools/issues"